# single-performance

./: .gitignore  README.md  environment-py.yml
analysis/: aligned_plots.R  cpu_statistics.R  memory_statistics.R
py-methods/: deg_performance.py  filtering_performance.py  hvg_performance.py  knn_performance.py  normalization_performance.py  pca_performance.py
rs-methods/: Cargo.toml  build.sh
rs-methods/src/: deg_performance.rs  filtering_performance.rs  hvg_performance.rs  knn_performance.rs  normalization_performance.rs  pca_performance.rs
runners/python/: deg_performance.sh  filtering_performance.sh  hvg_performance.sh  knn_performance.sh  normalization_performance.sh  pca_performance.sh
runners/rust/: deg_runner.sh  filtering_runner.sh  hvg_runner.sh  knn_runner.sh  normalization_runner.sh  pca_runner.sh
